introduce the usage of Assertion and nullness annotations from Mongo Java Driver